--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -15,16 +15,16 @@
 <body>
     <div id="loader"></div>
     <header class="appear">
-        <div id="logo">
+        <figure id="logo">
             <img src="assets/images/logo/ohmyfood.png" alt="Logo 'OhMyFood'">
-        </div>
+        </figure>
     </header>
 
     <main class="appear">
-        <div id="location">
+        <figure id="location">
             <img src="assets/images/icons/Pin.svg" alt="Icone de géolocalisation">
-            <span>Paris,Belleville</span>
-        </div>
+            <figcaption>Paris,Belleville</figcaption>
+        </figure>
         <section id="intro">
             <h1>Réservez le menu qui vous convient</h1>
             <span>Découvrez des restaurants d'exception, sélectionnés par nos soins.</span>
@@ -56,7 +56,7 @@
             <div id="restaurants">
                 <h2>Restaurants</h2>
                 <div id="restaurants_list">
-                    <a href="palette_du_gout.html" class="card">
+                    <a href="html/palette_du_gout.html" class="card">
                         <img class="card_img" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt="Photo du restaurant 'La palette du Gout'">
                         <div class="new_tag">Nouveau</div>
@@ -68,7 +68,7 @@
                             <img class="like" src="assets/images/icons/Like.png" alt="Icone de coeur">
                         </div>
                     </a>
-                    <a href="note_enchantee.html" class="card">
+                    <a href="html/note_enchantee.html" class="card">
                         <img class="card_img" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                             alt="Photo du restaurant 'La note enchantée'">
                         <div class="new_tag">Nouveau</div>
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="a_la_francaise.html" class="card">
+                    <a href="html/a_la_francaise.html" class="card">
                         <img class="card_img" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="Photo du restaurant 'A la française'">
                         <div class="new_tag hidden">Nouveau</div>
@@ -94,7 +94,7 @@
                             <img class="like" src="assets/images/icons/Like.png" alt="Icone de coeur">
                         </div>
                     </a>
-                    <a href="delice_des_sens.html" class="card">
+                    <a href="html/delice_des_sens.html" class="card">
                         <img class="card_img"
                             src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt="Photo du restaurant 'Le délice des sens'">
