--- a/html/a_la_francaise.html
+++ b/html/a_la_francaise.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -9,32 +9,32 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         rel="stylesheet" />
-    <title>Le délice des sens</title>
+    <title>À la française</title>
 </head>
 
 <body>
     <header>
         <a id="return" href="index.html"><img src="assets/images/icons/GoBack.png"
                 alt="Icone de fleche de retour en arrière"></a>
-        <div id="logo">
+        <figure id="logo">
             <img src="assets/images/logo/ohmyfood.png" alt="Logo 'OhMyFood'">
-        </div>
+        </figure>
     </header>
 
     <main>
-        <div id="preview">
-            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+        <figure id="preview">
+            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="Photo du restaurant 'La palette du goût'">
-        </div>
+        </figure>
 
         <section id="main_menu">
             <div id="restaurant_title">
-                <h1>Le délice des sens</h1>
-                <div class="heart_zone">
-                    <span class="material-symbols-outlined">
+                <h1>À la française</h1>
+                <figure class="heart_zone">
+                    <figcaption class="material-symbols-outlined">
                         favorite
-                    </span>
-                </div>
+                    </figcaption>
+                </figure>
             </div>
             <article class="sub_menu">
                 <div>
@@ -43,8 +43,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Tartare de thon</h3>
-                        <span class="item_txt">Assaisonné au yuzu</span>
+                        <h3>Tartare de poulpe acidulé</h3>
+                        <span class="item_txt">Aux zestes d'orange</span>
                     </div>
                     <span class="item_price">25€</span>
                     <div class="check_mark">
@@ -53,8 +53,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Bouchée de homard croustillant</h3>
-                        <span class="item_txt">Et sa farandole de petits légumes</span>
+                        <h3>Velouté de légumes d'antan</h3>
+                        <span class="item_txt">Carotte, panais, topinambour</span>
                     </div>
                     <span class="item_price">35€</span>
                     <div class="check_mark">
@@ -63,8 +63,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Velouté de cèpes</h3>
-                        <span class="item_txt">Aux truffes</span>
+                        <h3>Soupe à l'oignon</h3>
+                        <span class="item_txt">Revisitée</span>
                     </div>
                     <span class="item_price">20€</span>
                     <div class="check_mark">
@@ -77,8 +77,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Poulet rôti aux herbes de Provence</h3>
-                        <span class="item_txt">Et sa crème de truffe</span>
+                        <h3>Coquilles Saint-Jacques</h3>
+                        <span class="item_txt">Accompagnées d'une purée de panais</span>
                     </div>
                     <span class="item_price">40€</span>
                     <div class="check_mark">
@@ -87,8 +87,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Langouste rôtie</h3>
-                        <span class="item_txt">Et ses légumes de saison</span>
+                        <h3>Magret de canard</h3>
+                        <span class="item_txt">Et parmentier de pommes de terre</span>
                     </div>
                     <span class="item_price">35€</span>
                     <div class="check_mark">
@@ -97,8 +97,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Côte de bœuf Angus</h3>
-                        <span class="item_txt">Et sa purée de panais</span>
+                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                        <span class="item_txt">Sur son lit de gnocchis aux légumes</span>
                     </div>
                     <span class="item_price">44€</span>
                     <div class="check_mark">
@@ -111,8 +111,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Farandole de desserts</h3>
-                        <span class="item_txt">Du chef</span>
+                        <h3>Pétales de violettes glacés</h3>
+                        <span class="item_txt">Et purée de noisettes</span>
                     </div>
                     <span class="item_price">18€</span>
                     <div class="check_mark">
@@ -121,8 +121,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Crème brulée</h3>
-                        <span class="item_txt">Revisitée</span>
+                        <h3>Fondant au chocolat</h3>
+                        <span class="item_txt">Revisité</span>
                     </div>
                     <span class="item_price">22€</span>
                     <div class="check_mark">
@@ -131,8 +131,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Tiramisu</h3>
-                        <span class="item_txt">À la noisette</span>
+                        <h3>Millefeuille croustillant</h3>
+                        <span class="item_txt">Myrtilles et pâte d’amande</span>
                     </div>
                     <span class="item_price">23€</span>
                     <div class="check_mark">
