--- a/html/delice_des_sens.html
+++ b/html/delice_des_sens.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -9,32 +9,32 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         rel="stylesheet" />
-    <title>La note enchantée</title>
+    <title>Le délice des sens</title>
 </head>
 
 <body>
     <header>
         <a id="return" href="index.html"><img src="assets/images/icons/GoBack.png"
                 alt="Icone de fleche de retour en arrière"></a>
-        <div id="logo">
+        <figure id="logo">
             <img src="assets/images/logo/ohmyfood.png" alt="Logo 'OhMyFood'">
-        </div>
+        </figure>
     </header>
 
     <main>
-        <div id="preview">
-            <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+        <figure id="preview">
+            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="Photo du restaurant 'La palette du goût'">
-        </div>
+        </figure>
 
         <section id="main_menu">
             <div id="restaurant_title">
-                <h1>La note enchantée</h1>
-                <div class="heart_zone">
-                    <span class="material-symbols-outlined">
+                <h1>Le délice des sens</h1>
+                <figure class="heart_zone">
+                    <figcaption class="material-symbols-outlined">
                         favorite
-                    </span>
-                </div>
+                    </figcaption>
+                </figure>
             </div>
             <article class="sub_menu">
                 <div>
@@ -43,8 +43,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Ravioles de foie gras</h3>
-                        <span class="item_txt">Accompagnées de leur crème à la truffe</span>
+                        <h3>Tartare de thon</h3>
+                        <span class="item_txt">Assaisonné au yuzu</span>
                     </div>
                     <span class="item_price">25€</span>
                     <div class="check_mark">
@@ -53,8 +53,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Caviar osciètre</h3>
-                        <span class="item_txt">Sur blini à la farine de blé noir</span>
+                        <h3>Bouchée de homard croustillant</h3>
+                        <span class="item_txt">Et sa farandole de petits légumes</span>
                     </div>
                     <span class="item_price">35€</span>
                     <div class="check_mark">
@@ -63,20 +63,10 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Homard et espuma de potiron</h3>
-                        <span class="item_txt">Marinés aux zestes d'orange</span>
+                        <h3>Velouté de cèpes</h3>
+                        <span class="item_txt">Aux truffes</span>
                     </div>
                     <span class="item_price">20€</span>
-                    <div class="check_mark">
-                        <img src="assets/images/icons/check.png" alt="Marque de validation">
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item_info">
-                        <h3>Foie gras de canard cuit entier</h3>
-                        <span class="item_txt">Confiture de figue et pain toasté</span>
-                    </div>
-                    <span class="item_price">35€</span>
                     <div class="check_mark">
                         <img src="assets/images/icons/check.png" alt="Marque de validation">
                     </div>
@@ -87,8 +77,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Noix de coquilles Saint-Jacques</h3>
-                        <span class="item_txt">Sur lit de purée de céleri-rave</span>
+                        <h3>Poulet rôti aux herbes de Provence</h3>
+                        <span class="item_txt">Et sa crème de truffe</span>
                     </div>
                     <span class="item_price">40€</span>
                     <div class="check_mark">
@@ -97,8 +87,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Langoustine poêlée</h3>
-                        <span class="item_txt">Purée de patate douce</span>
+                        <h3>Langouste rôtie</h3>
+                        <span class="item_txt">Et ses légumes de saison</span>
                     </div>
                     <span class="item_price">35€</span>
                     <div class="check_mark">
@@ -107,8 +97,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Mijoté de queue de bœuf</h3>
-                        <span class="item_txt">Et riz sauvage aux zestes de citron</span>
+                        <h3>Côte de bœuf Angus</h3>
+                        <span class="item_txt">Et sa purée de panais</span>
                     </div>
                     <span class="item_price">44€</span>
                     <div class="check_mark">
@@ -121,8 +111,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Macaron noisette et chocolat</h3>
-                        <span class="item_txt">Glace au caramel brun et sel de Guérande</span>
+                        <h3>Farandole de desserts</h3>
+                        <span class="item_txt">Du chef</span>
                     </div>
                     <span class="item_price">18€</span>
                     <div class="check_mark">
@@ -131,8 +121,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Baba au rhum revisité</h3>
-                        <span class="item_txt">Avec son coulis de citron</span>
+                        <h3>Crème brulée</h3>
+                        <span class="item_txt">Revisitée</span>
                     </div>
                     <span class="item_price">22€</span>
                     <div class="check_mark">
@@ -141,8 +131,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Tarte au citron meringuée</h3>
-                        <span class="item_txt">Déstructurée</span>
+                        <h3>Tiramisu</h3>
+                        <span class="item_txt">À la noisette</span>
                     </div>
                     <span class="item_price">23€</span>
                     <div class="check_mark">
