--- a/html/note_enchantee.html
+++ b/html/note_enchantee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -9,32 +9,32 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         rel="stylesheet" />
-    <title>À la française</title>
+    <title>La note enchantée</title>
 </head>
 
 <body>
     <header>
         <a id="return" href="index.html"><img src="assets/images/icons/GoBack.png"
                 alt="Icone de fleche de retour en arrière"></a>
-        <div id="logo">
+        <figure id="logo">
             <img src="assets/images/logo/ohmyfood.png" alt="Logo 'OhMyFood'">
-        </div>
+        </figure>
     </header>
 
     <main>
-        <div id="preview">
-            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        <figure id="preview">
+            <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="Photo du restaurant 'La palette du goût'">
-        </div>
+        </figure>
 
         <section id="main_menu">
             <div id="restaurant_title">
-                <h1>À la française</h1>
-                <div class="heart_zone">
-                    <span class="material-symbols-outlined">
+                <h1>La note enchantée</h1>
+                <figure class="heart_zone">
+                    <figcaption class="material-symbols-outlined">
                         favorite
-                    </span>
-                </div>
+                    </figcaption>
+                </figure>
             </div>
             <article class="sub_menu">
                 <div>
@@ -43,8 +43,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Tartare de poulpe acidulé</h3>
-                        <span class="item_txt">Aux zestes d'orange</span>
+                        <h3>Ravioles de foie gras</h3>
+                        <span class="item_txt">Accompagnées de leur crème à la truffe</span>
                     </div>
                     <span class="item_price">25€</span>
                     <div class="check_mark">
@@ -53,8 +53,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Velouté de légumes d'antan</h3>
-                        <span class="item_txt">Carotte, panais, topinambour</span>
+                        <h3>Caviar osciètre</h3>
+                        <span class="item_txt">Sur blini à la farine de blé noir</span>
                     </div>
                     <span class="item_price">35€</span>
                     <div class="check_mark">
@@ -63,10 +63,20 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Soupe à l'oignon</h3>
-                        <span class="item_txt">Revisitée</span>
+                        <h3>Homard et espuma de potiron</h3>
+                        <span class="item_txt">Marinés aux zestes d'orange</span>
                     </div>
                     <span class="item_price">20€</span>
+                    <div class="check_mark">
+                        <img src="assets/images/icons/check.png" alt="Marque de validation">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item_info">
+                        <h3>Foie gras de canard cuit entier</h3>
+                        <span class="item_txt">Confiture de figue et pain toasté</span>
+                    </div>
+                    <span class="item_price">35€</span>
                     <div class="check_mark">
                         <img src="assets/images/icons/check.png" alt="Marque de validation">
                     </div>
@@ -77,8 +87,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <span class="item_txt">Accompagnées d'une purée de panais</span>
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                        <span class="item_txt">Sur lit de purée de céleri-rave</span>
                     </div>
                     <span class="item_price">40€</span>
                     <div class="check_mark">
@@ -87,8 +97,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Magret de canard</h3>
-                        <span class="item_txt">Et parmentier de pommes de terre</span>
+                        <h3>Langoustine poêlée</h3>
+                        <span class="item_txt">Purée de patate douce</span>
                     </div>
                     <span class="item_price">35€</span>
                     <div class="check_mark">
@@ -97,8 +107,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                        <span class="item_txt">Sur son lit de gnocchis aux légumes</span>
+                        <h3>Mijoté de queue de bœuf</h3>
+                        <span class="item_txt">Et riz sauvage aux zestes de citron</span>
                     </div>
                     <span class="item_price">44€</span>
                     <div class="check_mark">
@@ -111,8 +121,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Pétales de violettes glacés</h3>
-                        <span class="item_txt">Et purée de noisettes</span>
+                        <h3>Macaron noisette et chocolat</h3>
+                        <span class="item_txt">Glace au caramel brun et sel de Guérande</span>
                     </div>
                     <span class="item_price">18€</span>
                     <div class="check_mark">
@@ -121,8 +131,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Fondant au chocolat</h3>
-                        <span class="item_txt">Revisité</span>
+                        <h3>Baba au rhum revisité</h3>
+                        <span class="item_txt">Avec son coulis de citron</span>
                     </div>
                     <span class="item_price">22€</span>
                     <div class="check_mark">
@@ -131,8 +141,8 @@
                 </div>
                 <div class="item">
                     <div class="item_info">
-                        <h3>Millefeuille croustillant</h3>
-                        <span class="item_txt">Myrtilles et pâte d’amande</span>
+                        <h3>Tarte au citron meringuée</h3>
+                        <span class="item_txt">Déstructurée</span>
                     </div>
                     <span class="item_price">23€</span>
                     <div class="check_mark">
