--- a/html/palette_du_gout.html
+++ b/html/palette_du_gout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -16,25 +16,25 @@
     <header>
         <a id="return" href="index.html"><img src="assets/images/icons/GoBack.png"
                 alt="Icone de fleche de retour en arrière"></a>
-        <div id="logo">
+        <figure id="logo">
             <img src="assets/images/logo/ohmyfood.png" alt="Logo 'OhMyFood'">
-        </div>
+        </figure>
     </header>
 
     <main>
-        <div id="preview">
+        <figure id="preview">
             <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="Photo du restaurant 'La palette du goût'">
-        </div>
+        </figure>
 
         <section id="main_menu">
             <div id="restaurant_title">
                 <h1>La palette du goût</h1>
-                <div class="heart_zone">
-                    <span class="material-symbols-outlined">
+                <figure class="heart_zone">
+                    <figcaption class="material-symbols-outlined">
                         favorite
-                    </span>
-                </div>
+                    </figcaption>
+                </figure>
             </div>
             <article class="sub_menu">
                 <div>
